--- a/strana2.html
+++ b/strana2.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moja láska k Dominike</title>
-    <style>
-        body {
-            margin:0; padding:0; font-family:'Segoe UI', sans-serif;
-            background: linear-gradient(135deg, #ffd6e8, #ffe3f3, #fff4fa);
-            display:flex; flex-direction:column; justify-content:center; align-items:center; height:100vh; text-align:center;
-        }
-        .content-box {
-            background: rgba(255,255,255,0.55); padding:40px 50px; border-radius:30px;
-            box-shadow: 0 0 30px rgba(255,150,180,0.5); backdrop-filter: blur(6px); max-width:700px;
-        }
-        h1 { font-size:3rem; margin-bottom:20px; color:#c2185b; text-shadow:0 0 10px #fff; }
-        p { font-size:1.5rem; line-height:1.9; color:#c2185b; }
-        .emojis { font-size:2.5rem; margin:20px 0; animation:float 3s infinite ease-in-out; }
-        @keyframes float { 0% { transform:translateY(0); } 50% { transform:translateY(-10px); } 100% { transform:translateY(0); } }
-        a.button {
-            display:inline-block; padding:12px 25px; margin-top:20px; font-size:1.2rem;
-            color:white; background-color:#c2185b; text-decoration:none; border-radius:15px;
-            transition:0.3s;
-        }
-        a.button:hover { background-color:#ff6699; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Moja láska k Dominike</title>
+<style>
+    body {
+        margin: 0;
+        padding: 20px 10px;
+        font-family: 'Segoe UI', sans-serif;
+        background: linear-gradient(135deg, #ffd6e8, #ffe3f3, #fff4fa);
+        text-align: center;
+        min-height: 100vh;
+    }
+    .content-box {
+        background: rgba(255,255,255,0.55);
+        padding: 30px 25px;
+        border-radius: 25px;
+        box-shadow: 0 0 25px rgba(255,150,180,0.5);
+        backdrop-filter: blur(6px);
+        width: 90%;
+        max-width: 600px;
+        margin: 20px auto;
+    }
+    h1 { font-size: 2.2rem; margin-bottom: 15px; color: #c2185b; text-shadow: 0 0 8px #fff; }
+    p { font-size: 1.2rem; line-height: 1.6; color: #c2185b; }
+    .emojis { font-size: 2.5rem; margin: 20px 0; animation: float 3s infinite ease-in-out; }
+    @keyframes float { 0% { transform: translateY(0); } 50% { transform: translateY(-8px); } 100% { transform: translateY(0); } }
+    a.button {
+        display: inline-block;
+        padding: 14px 28px;
+        margin-top: 20px;
+        font-size: 1.2rem;
+        color: white;
+        background-color: #c2185b;
+        text-decoration: none;
+        border-radius: 15px;
+        transition: 0.3s;
+    }
+    a.button:hover { background-color: #ff6699; }
+    @media (max-width:480px) {
+        h1 { font-size: 1.8rem; }
+        p { font-size: 1rem; }
+        .emojis { font-size: 2rem; }
+        a.button { padding: 12px 20px; font-size: 1rem; }
+    }
+</style>
 </head>
 <body>
     <div class="content-box">
