--- a/strana2.html
+++ b/strana2.html
@@ -24,7 +24,7 @@
         margin: 20px auto;
     }
     h1 { font-size: 2.2rem; margin-bottom: 15px; color: #c2185b; text-shadow: 0 0 8px #fff; }
-    p { font-size: 1.2rem; line-height: 1.6; color: #c2185b; }
+    p { font-size: 1.2rem; line-height: 1.6; color: #c2185b; margin-bottom: 15px; }
     .emojis { font-size: 2.5rem; margin: 20px 0; animation: float 3s infinite ease-in-out; }
     @keyframes float { 0% { transform: translateY(0); } 50% { transform: translateY(-8px); } 100% { transform: translateY(0); } }
     a.button {
@@ -50,15 +50,17 @@
 <body>
     <div class="content-box">
         <h1>💖💞 Moja láska k tebe, Dominika 💞💖</h1>
-        <p>
-            Dominika, chcem, aby si vedela, že ťa milujem celým svojim srdcom ❤️💘.<br>
-            Každý deň, každá myšlienka, každý úsmev, ktorý mi dávaš, ma robí šťastnejším než čokoľvek iné na svete 💞🥺.<br>
-            Si pre mňa výnimočná, jedinečná, nenahraditeľná a krásna v každom smere 💖✨.<br>
-            Milujem spôsob, akým mi vieš rozžiariť deň, aj keď ani nevieš, že to robíš 💘🥰.<br>
-            Milujem ťa, Dominika. Úprimne. Silne. Pravdivo. Nekonečne. ♾️❤️💞💍<br>
-            A vždy budem stáť pri tebe, nech nás čaká čokoľvek 💖🤍💞.
-        </p>
+
+        <p>Dominika, chcem ti povedať, že ťa milujem celým svojim srdcom ❤️💘. Každý deň, keď si v mojich myšlienkach, je pre mňa darom a napĺňa ma nekonečnou radosťou 💞✨.</p>
+
+        <p>Spomínam na všetky naše rozhovory a na to, ako dokážeš aj jednoduchou správou spraviť môj deň krajším 🥰💖. Tvoj úsmev a tvoja jemnosť sú pre mňa ako slnko po daždi 🌸💘.</p>
+
+        <p>Každý deň sa teším na náš prvý spoločný okamih <strong>6. decembra</strong> 💍 a na všetky chvíle, ktoré spolu prežijeme. Ty si moja jediná, moje nekonečno ♾️💞 a dar, ktorý som nikdy nečakal, ale presne som potreboval.</p>
+
+        <p>Si moja radosť, moja inšpirácia a môj pokoj ❤️💖. Milujem každú tvoju drobnosť, každý úsmev a pohľad 💘💞. S tebou je každý deň výnimočný a plný lásky 💖💍♾️.</p>
+
         <div class="emojis">❤️💖💘💞🥺💍♾️💘💞💖❤️</div>
+
         <a class="button" href="index.html">💞 Späť na hlavnú stránku 💞</a>
     </div>
 </body>
